@@ -1,3 +1,6 @@
+  28 Dec 2012; Manuel Rüger <gentoo@rueg.eu pygments-rb-0.3.3.ebuild:
+  dev-ruby/pygments-rb: Add some hints about the failing test
+
 *pygments-rb-0.3.3 (28 Dec 2012)
 
   28 Dec 2012; Manuel Rüger <gentoo@rueg.eu +metadata.xml,
